--- a/CodeFactory-Git/.classpath
+++ b/CodeFactory-Git/.classpath
@@ -61,6 +61,39 @@
 	<classpathentry kind="lib" path="ext-lib/jsc.jar"/>
 	<classpathentry kind="lib" path="ext-lib/colt/colt.jar"/>
 	<classpathentry kind="lib" path="ext-lib/colt/concurrent.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/aws-java-sdk-1.11.308-sources.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/aws-java-sdk-1.11.308.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/CodeFactory-Git/ext-lib/aws-sdk-1.11.308/aws-java-sdk-1.11.308-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/aspectjrt-1.8.2.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/aspectjweaver.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/aws-swf-build-tools-1.1.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/freemarker-2.3.9.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/httpclient-4.5.5.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/httpcore-4.4.9.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/ion-java-1.0.2.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-annotations-2.6.0.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-core-2.6.7.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-databind-2.6.7.1.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-dataformat-cbor-2.6.7.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/javax.mail-api-1.4.6.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jmespath-java-1.11.308.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/joda-time-2.8.1.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-buffer-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-codec-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-codec-http-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-common-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-handler-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-resolver-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-transport-4.1.17.Final.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-beans-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-context-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-core-3.0.7.RELEASE.jar"/>
+	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-test-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
