--- a/CodeFactory-Git/.classpath
+++ b/CodeFactory-Git/.classpath
@@ -1,99 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="ext-lib/flanagan.jar"/>
-	<classpathentry kind="lib" path="ext-lib/javax.mail.jar"/>
-	<classpathentry kind="lib" path="ext-lib/mysql-connector-java-5.1.13-bin.jar"/>
-	<classpathentry kind="lib" path="ext-lib/hadoop-20/hadoop-0.20.2-ant.jar"/>
-	<classpathentry kind="lib" path="ext-lib/hadoop-20/hadoop-0.20.2-core.jar"/>
-	<classpathentry kind="lib" path="ext-lib/hadoop-20/hadoop-0.20.2-examples.jar"/>
-	<classpathentry kind="lib" path="ext-lib/hadoop-20/hadoop-0.20.2-test.jar"/>
-	<classpathentry kind="lib" path="ext-lib/hadoop-20/hadoop-0.20.2-tools.jar"/>
-	<classpathentry kind="lib" path="ext-lib/hadoop-20/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.aop-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.asm-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.aspects-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.beans-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.context-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.context.support-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.core-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.expression-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.instrument-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.instrument.tomcat-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.jdbc-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.jms-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.orm-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.oxm-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.test-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.transaction-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.web-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.web.portlet-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.web.servlet-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/org.springframework.web.struts-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/asm-3.2.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/cglib-2.2.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.aop-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.asm-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.aspects-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.beans-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.context-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.context.support-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.core-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.expression-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.instrument-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.instrument.tomcat-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.jdbc-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.jms-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.orm-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.oxm-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.test-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.transaction-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.web-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.web.portlet-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.web.servlet-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/spring/src/org.springframework.web.struts-sources-3.0.5.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/commonsDBCP/commons-dbcp-1.4-sources.jar"/>
-	<classpathentry kind="lib" path="ext-lib/commonsPOOL/commons-pool-1.5.5-sources.jar"/>
-	<classpathentry kind="lib" path="ext-lib/commonsDBCP/commons-dbcp-1.4.jar"/>
-	<classpathentry kind="lib" path="ext-lib/commonsPOOL/commons-pool-1.5.5.jar"/>
-	<classpathentry kind="lib" path="ext-lib/jsc.jar"/>
-	<classpathentry kind="lib" path="ext-lib/colt/colt.jar"/>
-	<classpathentry kind="lib" path="ext-lib/colt/concurrent.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/aws-java-sdk-1.11.308-sources.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/aws-java-sdk-1.11.308.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/CodeFactory-Git/ext-lib/aws-sdk-1.11.308/aws-java-sdk-1.11.308-javadoc.jar!/"/>
+			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/aspectjrt-1.8.2.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/aspectjweaver.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/aws-swf-build-tools-1.1.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/freemarker-2.3.9.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/httpclient-4.5.5.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/httpcore-4.4.9.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/ion-java-1.0.2.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-annotations-2.6.0.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-core-2.6.7.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-databind-2.6.7.1.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jackson-dataformat-cbor-2.6.7.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/javax.mail-api-1.4.6.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/jmespath-java-1.11.308.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/joda-time-2.8.1.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-buffer-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-codec-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-codec-http-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-common-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-handler-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-resolver-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/netty-transport-4.1.17.Final.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-beans-3.0.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-context-3.0.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-core-3.0.7.RELEASE.jar"/>
-	<classpathentry kind="lib" path="ext-lib/aws-sdk-1.11.308/lib/spring-test-3.0.7.RELEASE.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
